--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
-click==6.7
-Flask==0.12.2
-itsdangerous==0.24
-Jinja2==2.9.6
-MarkupSafe==1.0
-Werkzeug==0.12.2
-aniso8601==1.2.0
-asn1crypto==0.22.0
-cffi==1.10.0
-click==6.7
-configparser==3.5.0
-cryptography==2.0.2
-Flask-Ask==0.9.6
-idna==2.5
-pycparser==2.18
-pyOpenSSL==17.0.0
-python-dateutil==2.6.1
-PyYAML==3.12
-six==1.10.0
+aniso8601 (1.2.0)
+asn1crypto (0.22.0)
+cffi (1.10.0)
+click (6.7)
+configparser (3.5.0)
+cryptography (2.0.2)
+Flask (0.12.2)
+Flask-Ask (0.9.6)
+idna (2.5)
+itsdangerous (0.24)
+Jinja2 (2.9.6)
+MarkupSafe (1.0)
+pip (9.0.1)
+py (1.4.34)
+pycparser (2.18)
+pyOpenSSL (17.0.0)
+pytest (3.1.3)
+python-dateutil (2.6.1)
+PyYAML (3.12)
+setuptools (28.8.0)
+six (1.10.0)
+Werkzeug (0.12.2)
